raffia/tests/error/scss/at-rule/keyframes/semicolon.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but `}` received
  ┌─ semicolon.scss:3:1
  │
3 │ }
  │ ^


